--- a/PSMusic/psmusic.client/src/components/TrackTable/TrackTable.module.css
+++ b/PSMusic/psmusic.client/src/components/TrackTable/TrackTable.module.css
@@ -6,6 +6,7 @@
 .header {
     display: grid;
     grid-template-columns: 32px minmax(0, 1fr);
+    column-gap: 24px;
     align-items: center;
     padding: 16px 0;
     font-size: 12px;
@@ -15,22 +16,18 @@
 }
 
 .colIndex {
-    text-align: right;
-    padding-right: 8px;
+    text-align: center;
 }
 
-/* phần header chính – bám layout của sr-song-tab: 
-   [cover+title] [artist] [time] */
 .headerMain {
     display: grid;
-    grid-template-columns: minmax(0, 4fr) minmax(0, 3fr) auto;
+    grid-template-columns: minmax(0, 4fr) minmax(0, 3fr) 60px;
     column-gap: 20px;
     align-items: center;
+    padding: 0 12px;
 }
 
-/* chữ "Tên bài hát" lùi vào để thẳng với text sau cover 52px + gap 12px */
 .colTitle {
-    padding-left: 64px;
     white-space: nowrap;
 }
 
@@ -41,7 +38,7 @@
 
 .colTime {
     text-align: right;
-    padding-right: 15px;
+    padding-right: 0px;
 }
 
 /* BODY */
@@ -56,7 +53,7 @@
     display: grid;
     grid-template-columns: 32px minmax(0, 1fr);
     align-items: center;
-    column-gap: 16px;
+    column-gap: 24px;
 }
 
 /* số thứ tự trong body */
