--- a/PSMusic/psmusic.client/src/pages/FavoriteSongsPage/FavoriteSongsPage.module.css
+++ b/PSMusic/psmusic.client/src/pages/FavoriteSongsPage/FavoriteSongsPage.module.css
@@ -330,6 +330,7 @@
   text-transform: uppercase;
   letter-spacing: 0.08em;
   color: var(--text-tertiary);
+  column-gap: 16px;
 }
 
 .colIndex {
@@ -339,13 +340,13 @@
 
 .headerMain {
   display: grid;
-  grid-template-columns: minmax(0, 4fr) minmax(0, 3fr) auto;
+  grid-template-columns: minmax(0, 4fr) minmax(0, 3fr) 60px;
   column-gap: 20px;
   align-items: center;
+  padding: 0 12px;
 }
 
 .colTitle {
-  padding-left: 64px;
   white-space: nowrap;
 }
 
@@ -356,7 +357,7 @@
 
 .colTime {
   text-align: right;
-  padding-right: 15px;
+  padding-right: 0px;
 }
 
 .body {
